# tonesoul-codex

./: FIRST_CONTACT.md  MANIFESTO.md  Makefile  README.md  ci.yml  docker-compose.yml  pyvenv.cfg  quick_setup.py  requirements.txt
examples/: README.md  basic_usage.py  evolution_monitoring.py  vow_management.py
scripts/: run_tests.py  start_server.py
src/: main.py
src/core/: action_executor_module.py  adaptive_learning_module.py  gratitude_handler_module.py  metacognitive_module.py  tone_function_classifier.py
tests/: __init__.py  test_api.py  test_tone_bridge.py  test_tone_function_classifier.py
tonesoul-repository/: CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  DEPLOYMENT.md  Dockerfile  LICENSE  PHILOSOPHY.md  ROADMAP.md  pyproject.toml  setup.py
tonesoul-repository/docs/: API.md  ARCHITECTURE.md  CONSCIOUSNESS_RESEARCH.md  PERSPECTIVES.md
tonesoul-repository/src/core/: assistance_module.py  complaint_handler_module.py  conversation_module.py  default_handler_module.py  empathy_module.py  knowledge_base_module.py  qa_module.py  reflection_module.py  statement_processor_module.py  tone_bridge.py  tone_strategic_router.py  vow_checker.py
tonesoul-repository/src/schemas/: evolution_object.py  source_trace.py  vow_object.py
tonesoul-repository/tests/: test_evolution_modules.py  test_functional_modules.py  test_source_trace.py  test_tone_strategic_router.py  test_vow_checker.py
